# atldp

./: .gitignore  .gitmodules  Cargo.toml  README.md  references.md  rust-toolchain.toml
.github/workflows/: ci.yml
core/: README.md  pyproject.toml
core/src/atldp/: __init__.py  cli.py
core/src/atldp/core/: __init__.py  catenary.py  change_of_state.py  conductor.py  geometry.py  ruling_span.py
core/tests/: test_catenary.py  test_change_of_state.py  test_geometry.py  test_ruling_span.py
core/validation/: README.md  export_reference.py  test_catenary_closed_form.py  test_change_of_state_invariants.py  test_method_agreement.py
core/validation/oracles/: README.md
crates/atldp-app/: Cargo.toml
crates/atldp-app/src/: basemap.rs  main.rs
crates/atldp-cli/: Cargo.toml
crates/atldp-cli/src/: main.rs
crates/atldp-core/: Cargo.toml
crates/atldp-core/src/: catenary.rs  change_of_state.rs  conductor.rs  geometry.rs  lib.rs  ruling_span.rs  structure.rs
crates/atldp-core/tests/: ORACLES.md  cross_check_python_oracle.rs  golden_catenary_closed_form.rs  golden_change_of_state_invariants.rs  golden_method_agreement.rs  golden_otls_change_of_state.rs  golden_otls_models.rs
crates/atldp-core/tests/fixtures/: oracle_cos.csv  oracle_spans.csv
crates/atldp-geo/: Cargo.toml
crates/atldp-geo/src/: crs.rs  dem.rs  lib.rs  profile.rs
crates/atldp-geo/tests/: fetch_srtm.sh  srtm_import.rs
crates/atldp-model/: Cargo.toml
crates/atldp-model/src/: analysis.rs  format.rs  lib.rs  report.rs  sheet.rs
crates/atldp-render/: Cargo.toml
crates/atldp-render/src/: camera.rs  catenary_line.rs  catenary_line.wgsl  lib.rs  spotting_lines.rs  spotting_lines.wgsl  terrain_drape.rs  terrain_drape.wgsl  terrain_mesh.rs  terrain_mesh.wgsl
docs/: ATLDP.pptx  IMPLEMENTATION_PLAN.md  theory.md  theory.tex
docs/adr/: 0001-record-architecture-decisions.md  0002-python-core-with-separated-layers.md  0003-analytic-sag-tension-baseline-before-fem.md  0004-standards-baseline.md  0005-local-dem-as-geospatial-source-of-truth.md  0006-defer-gui-headless-first.md  0007-prototype-isolation-and-repo-hygiene.md  0008-validation-against-references.md  0009-staged-design-pipeline-and-project-model.md  0010-manual-spotting-before-cost-optimization.md  0011-rust-native-production-stack.md  0012-desktop-gui-wgpu-egui.md  0013-pure-rust-geospatial-stack.md  0014-python-core-retirement-criteria.md  0015-multi-wire-conductor-set-and-tension-sections.md  0016-structure-family-library-and-application-chart.md  0017-load-case-criteria-set-engine.md  0018-two-tier-terrain-precision.md  0019-route-poi-model-and-mandatory-angle-structures.md  0020-structure-geometry-and-tower-elevation-view.md  0021-bring-fem-forward-for-uneven-spans.md  0022-srtm-area-selection-and-plan-view-route-editor.md  0023-angle-as-deflection-derived-property.md  0024-production-plan-and-profile-sheets.md  0025-osm-basemap-and-shared-map-image.md  README.md
tests/terrain/: README.md  requirements.txt  terrain_navigation.py
