[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atldp-core"
version = "0.1.0"
description = "ATLDP validated sag-tension core (headless engineering engine, Phase 1)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Carlos Kleber C. Arruda" }]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
atldp = "atldp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "validation"]
addopts = "-q"
