[package]
name = "atldp-app"
description = "ATLDP desktop CAD shell: winit window, egui docked UI, command/undo stack (ADR-0012). The binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atldp-app"
path = "src/main.rs"

[dependencies]
atldp-core.workspace = true
atldp-geo.workspace = true
atldp-model.workspace = true
atldp-render.workspace = true
egui = "0.34.3"
egui-wgpu = "0.34.3"
egui-winit = "0.34.3"
egui_dock = "0.19.1"
env_logger = "0.11.10"
glam = "0.33.1"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"
