[package]
name = "atldp-cli"
description = "Thin CLI over atldp-core for scripting and parity with the Python `atldp` CLI (ADR-0011)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "atldp"
path = "src/main.rs"

[dependencies]
atldp-core.workspace = true
# Arg parsing is hand-rolled in src/main.rs (no clap) to keep the binary small
# and dependency-free; the `catenary`/`cos` subcommands mirror the Python CLI.
