[package]
name = "atldp-core"
description = "Pure sag-tension numerics: geometry, catenary, change-of-state, ruling span, conductor (ADR-0011)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# No I/O, no GPU, no deps — this crate is the validation target for the Python
# `core/` oracle (ADR-0014), so its numerics are self-contained and auditable.
# The catenary closed forms and the change-of-state root finder (bisection) are
# implemented in-tree; no external numerics crate is needed at the G1 scope.
[dependencies]
