[package]
name = "atldp-model"
description = "Serializable project model: terrain, route, structures, conductors, weather cases, results + staleness (ADR-0009)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atldp-core.workspace = true
# G6: serde-derived project model + the open ATLDP file format (JSON `.atldp`).
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
