[package]
name = "atldp-render"
description = "wgpu rendering: shared 2D (ortho) + 3D engines, point-cloud LOD, picking (ADR-0012). No app/UI logic."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
atldp-core.workspace = true
bytemuck = { version = "1.25.0", features = ["derive"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
glam = "0.33.1"
wgpu = "29.0.3"
